<resources>
    <string name="app_name">Indications</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_signout">SignOut</string>
    <string name="action_settings">Settings</string>
    <string name="account_info">Account Info</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="settings">Settings</string>
    <string name="developer_screen">Developers</string>
    <string name="about_us">About</string>
    <string name="general">General</string>
    <string name="logout">Logout?</string>

    <!--Settings activity strings-->
    <string name="theme_summary">Change the theme of the app</string>
    <string name="theme_dialog">Select app theme</string>
    <string name="select_theme">Select theme</string>
    <string name="text_summary">Change text size in news detail page</string>
    <string name="text_size">Text Size</string>
    <string name="settings_select_text">Select text size</string>
    <string name="settings_save_data">Download images?</string>
    <string name="settings_download_summary">Download images from the internet?</string>
    <string name="settings_look_and_feel">Look and feel</string>
    <string name="settings_general">General</string>

    <!-- Text size options-->
    <string name="text_size_small">Small</string>
    <string name="text_size_medium">Medium</string>
    <string name="text_size_large">Large</string>

    <!--keys for settings-->
    <string name="image_download_key">image_download</string>
    <string name="theme_key">app_theme</string>
    <string name="text_key">text_size</string>
    <string name="title_activity_login1">Sign in</string>

    <!-- Theme options-->
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="search">Search</string>
    <string name="more_options">More Options</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="name">Name</string>
    <string name="share">Share with a friend</string>
    <string name="home">Home</string>
    <string name="navigation">Navigation</string>
    <string name="nav_drawer_title">General</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="login_request">Please Login!</string>

    <string name="email_error">Enter Email</string>
    <string name="password_error">Enter Password</string>
    <string name="name_error">Enter Name</string>
    <string name="new_password_enter_error">Enter new Password</string>
    <string name="empty_email_error">Enter Email</string>

    <string name="toast_registration_success">Successfully Registered.</string>
    <string name="toast_signup_failure">Sign up failed.</string>
    <string name="toast_verification_email_sent">Sign up failed.</string>
    <string name="toast_signin_failure">Authentication failed.</string>
    <string name="toast_signin_success">Success</string>
    <string name="toast_signin_again_request">Please Sign in again</string>
    <string name="toast_password_change_success">Password Successfully Changed</string>
    <string name="toast_password_change_failed">Password Change Failed</string>
    <string name="toast_empty_email">\"Enter Email\"</string>
    <string name="toast_password_reset_email">Password reset email sent</string>
    <string name="hi">Hi There!</string>
    <string name="register_progress_dialog_title">Please wait &#8230; </string>
    <string name="register_progress_dialog_message">Registering new user</string>
    <string name="desc">ImageView</string>
    <string name="save_for_later">Save for Later?</string>
    <string name="url">Open in Web?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="open_in_map">Open location in map?</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="email_hint">user123@xyz.com</string>
    <string name="password_hint">Input Password</string>
    <string name="login_page">Back to login</string>
    <string name="username_hint">Username</string>
    <string name="todo">TODO</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="new_user">New User? Sign Up.</string>
    <string name="logging_in">Logging in user</string>
    <string name="longer_text">Bengaluru: For skywatchers and astronomers, it will be a rare occasion to witness a Supermoon, a blue moon and a total lunar eclipse on Wednesday evening. This rare combination of lunar events will be a treat for most people across the world, including India. But for the politicians in poll-bound Karnataka, it is nothing close to a ‘triple treat’ or celestial event.

For them, watching the blue moon, Supermoon and blood moon on the same day may not be good for their political future. And to ward off the evil powers of the rare lunar eclipse, many of the top Karnataka politicians are conducting special poojas and rituals at their houses and temples.

The cautious bunch of politicians also includes former Prime Minister and JDS supremo HD Deve Gowda, who performed a Sathyanarayana Pooja at his house in Bengaluru on Wednesday.

Gowda and his wife Chennamma offered “ahuthi” (offerings) to the fire god and sought protection from the “evil eyes” of Wednesday’s lunar eclipse.

Speaking to News18, Gowda said that it was a routine Sathyanarayana Pooja on poornima (full moon) and that there was nothing special about it. He said, “We perform Sathyanarayana Pooja on every full moon day and lunar eclipses happen only on full moon nights. I am a believer in god and Hinduism, I perform poojas with great belief and dedication.”

Not just Gowda, his son and former minister HD Revanna is also performing special poojas at several temples in neighbouring Tamil Nadu.

Along with his wife Bhavani, Gowda’s elder son reached Tamil Nadu on Tuesday night. According to his close aides, Revanna will be offering prayers at various temples in Tamil Nadu. He is known for his immense faith in astrology, Vaastu and Vaidic rituals.

A month earlier, the Gowda family had conducted a special Havan for 11 days, called “Athi Rudra Yaaga” at Shringeri, one of the four most ancient temples founded by Adi Shankaracharya.

Meanwhile, like his close aides say, it is just another day for Chief Minister Siddaramaiah. The chief minister who has now started wearing the Hindu identity on his sleeves was in office, holding official meetings. Even though Siddaramaiah never claimed that he was an atheist, he is not known for conducting religious events. His wife Parvathi Siddaramaiah, who is otherwise a recluse, is a firm believer and regularly conducts special poojas on behalf of her husband. She is also likely to offer special prayers once the lunar eclipse ends at night.

Another believer in mantra and tantra is BJP’s chief ministerial candidate BS Yeddyurappa, who is now busy with political engagements. His family claims that he is not conducting any specials poojas to please the moon god on Grahana day. “There are no special pooja or anything. Some local news channels are running a false news that he is busy performing poojas,” said his aide.

Wednesday’s rare combination of a Supermoon, blue moon and total lunar eclipse will be visible in most parts of the world, including India. The Supermoon is a full moon that takes place when the moon is at its closest distance to the Earth in the orbit and the eclipse itself is expected to last about an hour and a quarter.

The historic temples like Gavi Gangadhareshwara in Bengaluru, Kukke Subramanya at Kukke, Chennakeshava at Belur, Mahabaleshwara at Gokharna, Chamundeshwari at Mysore have been closed for public till the lunar eclipse is over.

Temple authorities claim politicians from across all parties are expected to visit them in the night. A priest at Gavi Gangadhareshwara temple said, “It is an election year. Politicians are worried about the results. Naturally they go to temples on days like these. We are expecting many city politicians to visit tonight.”</string>
    <string name="long_text">Copyright 2014 Manabu Shimobe

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.</string>
    <string name="error_connection">You\'re Offline </string>
    <string name="connection_restore">Go Online</string>
    <string name="welcome">Welcome!</string>
    <string name="menu_refresh">Refresh</string>
    <string name="title_activity_maps">Map</string>
    <string name="social_feed">Social Feed</string>


    <!--twitter authorisation-->
    <string name="com.twitter.sdk.android.CONSUMER_KEY">DNyLYB2gBH2N4QVDK2gCDhuTx</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">	Og7dFbJ3l2IcJuGVZ6ri6Ye2NwdFMTQEtHwWbRnV2VCHtwlygy</string>
    <string name="notifications_key">allow_notification</string>
    <string name="allow_notifications">Receive notifications from app?</string>
    <string name="notifications">Allow Notifications</string>

    <string name="toast_menu_1">One</string>
    <string name="toast_menu_2">two</string>
    <string name="text_action_button">three</string>
    <string name="unknown_action">nill</string>
    <string name="TransitionImage_ProductListToDetail">TransitionImage</string>
    <string name="grid_layout">Grid Layout</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="layout_manager">Layout Manager</string>
    <string name="default_message">Sent from GI India app</string>
    <string name="share_message">Share with a friend</string>
    <string name="title_menu_1">1</string>
    <string name="title_menu_2">2</string>

    <string name="general_information">General Information</string>
    <string name="account_settings">Account Settings</string>
    <string name="developers">Developers</string>
    <string name="text_to_speech">Text To Speech</string>
</resources>
