<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:defaultValue="true"
    android:enabled="true">

    <PreferenceCategory android:title="@string/settings_general">
        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_download"
            android:key="@string/image_download_key"
            android:summary="@string/settings_download_summary"
            android:title="@string/settings_save_data" />

        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:key="@string/notifications_key"
            android:summary="@string/allow_notifications"
            android:title="@string/notifications" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_look_and_feel">

        <ListPreference
            android:defaultValue="@string/text_size_small"
            android:dialogTitle="@string/settings_select_text"
            android:entries="@array/text_size"
            android:entryValues="@array/text_size"
            android:icon="@drawable/ic_text_size"
            android:key="@string/text_key"
            android:summary="@string/text_summary"
            android:title="@string/text_size" />
        <Preference
            android:icon="@drawable/ic_menu_microphone_dark"
            android:key="tts"
            android:summary="Set Speech Pitch and Speed"
            android:title="Set TTS" />
    </PreferenceCategory>

</PreferenceScreen>

