<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <item
            android:checkable="false"
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_information_variant"
            android:title="@string/about_us" />

    <item android:title="@string/nav_drawer_title">
        <menu>

            <item android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share"/>

            <item android:id="@+id/nav_bio"
                android:icon="@drawable/ic_menu_information"
                android:title="@string/developers"/>
        </menu>
    </item>

</menu>
