<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
    android:icon="@drawable/ic_menu_settings"
    android:id="@+id/action_settings_product_list"
    android:title="@string/settings"
    app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_tts"
        android:icon="@drawable/ic_menu_microphone"
        android:title="@string/text_to_speech"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_url"
        android:icon="@drawable/ic_menu_information"
        android:title="@string/url"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_location"
        android:title="@string/open_in_map"
        android:icon="@drawable/ic_menu_map_marker"
        app:showAsAction="ifRoom"/>

</menu>