<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/padding_smaller">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_bio"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin_smaller"
            android:elevation="@dimen/card_elevation"
            android:padding="3dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/text_bio_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/image_bio"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_toEndOf="@+id/image_bio"
            android:text="@string/app_name"
            android:textColor="@color/md_grey_900"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_bio_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_bio_name"
            android:layout_toEndOf="@+id/image_bio"
            android:autoLink="email"
            android:linksClickable="true"
            android:text="@string/social_feed"
            android:textAlignment="viewStart"
            android:textColor="@color/md_grey_700"
            android:textColorLink="@color/md_blue_400"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/image_bio"
            android:layout_below="@+id/image_bio"
            android:autoLink="email"
            android:linksClickable="true"
            android:text="@string/long_text"
            android:textAlignment="viewStart"
            android:textColor="@color/md_grey_700"
            android:textColorLink="@color/md_blue_400"
            android:textSize="14sp" />

    </RelativeLayout>
</android.support.v7.widget.CardView>